se ajusta la documentacion swagger
